refs #387 Seleniumの操作処理・メール送信機能追加

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,23 @@
+SOCIAL_USERNAME=
+SOCIAL_PASSWORD=
+SOCIAL_VENDOR_NAME='Yahoo! JAPAN ID'
+BINARY_LOCATION=
+
+LOG_DIR=
+LOG_LEVEL=INFO
+
 AWS_API_HOST=ec2.amazonaws.com
 AWS_API_ENDPOINT=https://ec2.amazonaws.com
 AWS_API_REGION=ap-northeast-1
 AWS_API_SERVICE_NAME=ec2
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+MAIL_SEND=1
+MAIL_USER=example
+MAIL_PASSWORD=
+MAIL_HOST=localhost
+MAIL_PORT=25
+MAIL_FROM_ADDRESS=sample@example.com
+MAIL_FROM_NAME=Test
+MAIL_TO_ADDRESS=sample@example.com
