--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,11 @@ name = "pypi"
 [packages]
 selenium = "*"
 python-dotenv = "*"
-requests = "*"
+requests = ">=2.20.0"
 "boto3" = "*"
 
 [dev-packages]
-pylint = "*"
 "autopep8" = "*"
+
+[requires]
+python_version = "3.6"
